about me section added

--- a/index.html
+++ b/index.html
@@ -95,6 +95,82 @@
                 
                 </div>
             </div>
+
+            <!-- <div class="container">
+                <div id="about_me" class="page_contents">
+                    <div class="row">
+                        <span class="neon-text"><h3>01.</h3></span> 
+                        <h2>About Me</h2>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-8">
+                            <p>
+                                Hello ! I am Nishchal, a chemical engineering student based in Hangzhou, China. Different chemical reactions with their color changing and odor emitting products have always fascinated me. I have been dedicated and passionate about solving problems existing in the real world. My goal has always been to understand how systems work and processes work in the real world and find a way to improve the existing system.
+                            </p>  
+                            <p>
+                                Shortly after completion of my sophomore year at Zhejiang University of Technology, I joined the engineering team at Tolaroid Technologies where I worked on a wide variety of interesting and meaningful projects on a daily basis.  
+                            </p>
+                            <p>
+                                Here are a few technologies I've been working with recently:
+                            </p>
+                            <p>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <ol>
+                                            <li>Aspen Plus</li>
+                                            <li>MATLAB</li>
+                                            <li>Solid Works</li>
+                                        </ol>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <ol start="4">
+                                            <li>SAS</li>
+                                            <li>ArcGIS</li>
+                                            <li>ArcGIS</li>
+                                        </ol>
+                                    </div>
+                                </div>
+                            </p>
+                        </div>
+                        <div class="col-md-4" id="about_me_img">
+                            <img src="images/nischal-aboutme.png" alt="Nishchal-Baniya" >
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+
+            <div class="container" id="about-me">
+                <div class="row">
+                    <div class="col">
+                        <h3>01.<strong class="h3">&nbsp;About Me</strong></h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-7 order-sm-2 order-md-1" id="about-me-text">
+                        <p>Hello ! I am Nishchal, a chemical engineering student based in Hangzhou, China. Different chemical reactions with their color changing and odor emitting products have always fascinated me. I have been dedicated and passionate about solving
+                            problems existing in the real world. My goal has always been to understand how systems work and processes work in the real world and find a way to improve the existing system.<br></p>
+                        <p>Shortly after completion of my sophomore year at Zhejiang University of Technology, I joined the engineering team at Tolaroid Technologies where I worked on a wide variety of interesting and meaningful projects on a daily basis.&nbsp;</p>
+                        <p>Here are a few technologies I've been working with recently:</p>
+                        <div class="row">
+                            <div class="col">
+                                <ol>
+                                    <li>Aspen Plus<br></li>
+                                    <li>MATLAB</li>
+                                    <li> Solid Works</li>
+                                </ol>
+                            </div>
+                            <div class="col">
+                                <ol start="4">
+                                    <li>SAS<br></li>
+                                    <li>ArcGIS</li>
+                                    <li> Latex</li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-5 align-self-center order-sm-1 order-md-2" id="about-me-img"><img class="img-fluid" src="images/nischal-aboutme.png"></div>
+                </div>
+            </div>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
