Adding the Loading Screen.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
 
     <body>
 
+        <!-- SCREEN LOADER STARTS. -->
+
+        <div id="screen-loader">
+            <div>
+                <img src="images/Animate_Logo.gif"/>
+            </div>
+        </div>
+
+        <!-- SCREEN LOADER ENDS. -->
+
         <!-- NAVBAR SECTION STARTS. -->
 
         <nav class="navbar navbar-expand-xl custom-navbar" style="background: #0A192F; height: 75px;">
@@ -483,7 +493,7 @@
 
                 <!-- Projects SECTION STARTS. -->
 
-                <div id="projects_section" class="page-contents" style="width:90%;">
+                <div id="work_section" class="page-contents mx-auto" style="width:90%;">
                     
                     <!-- HEADING. -->
                     <div class="page-contents-heading">
@@ -505,13 +515,13 @@
                     <!-- Projects -->
                     <div class="row">
                         <div class="col-10 col-md-4 offset-1 offset-md-1">
-                            <div class="card project"><img class="card-img-top w-100 d-block project-img" src="../images/Ligno%20Cellulose%20to%20Biofuel-small.jpg">
-                                <h5 class="project-text">Ligno Cellulose to Biofuel<a class="btn btn-img" data-lightbox="image-1" data-title="Ligno Cellulose to Biofuel" role="button" href="../images/Ligno%20Cellulose%20to%20Biofuel%201.png"><i class="fa fa-info-circle"></i></a></h5>
+                            <div class="card project"><img class="card-img-top w-100 d-block project-img" src="images/Ligno_Cellulose_to_Biofuel_Small.jpg">
+                                <h5 class="project-text">Ligno Cellulose to Biofuel<a class="btn btn-img" data-lightbox="image-1" data-title="Ligno Cellulose to Biofuel" role="button" href="images/Ligno_Cellulose_to_Biofuel_1.png"><i class="fa fa-info-circle"></i></a></h5>
                             </div>
                         </div>
                         <div class="col-10 col-md-4 offset-1 offset-md-2">
-                            <div class="card project"><img class="card-img-top w-100 d-block project-img" src="../images/Water%20Treatment-small.jpg">
-                                <h5 class="project-text">Water Treatment<a class="btn btn-img" data-lightbox="image-1" data-title="Water Treatment" role="button" href="../images/Water%20Treatment%201.png"><i class="fa fa-info-circle"></i></a></h5>
+                            <div class="card project"><img class="card-img-top w-100 d-block project-img" src="images/Water_Treatment_Small.jpg">
+                                <h5 class="project-text">Water Treatment<a class="btn btn-img" data-lightbox="image-1" data-title="Water Treatment" role="button" href="images/Water_Treatment_1.png"><i class="fa fa-info-circle"></i></a></h5>
                             </div>
                         </div>
                     </div>
