--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                 <!-- <div id="work_section" class="page-contents mx-auto" style="width:90%;"> -->
                 <div id="work_section" class="page-contents">
 
-<!--                 <div id="work_section" class="page-contents"> <!-- style="width:90%;"> --> -->
+<!--                 <div id="work_section" class="page-contents"> <!-- style="width:90%;"> --> 
 <!--                 <div id="work_section" class="page-contents mx-auto" style="width:90%;"> -->
                     <!-- HEADING. -->
                     <div class="page-contents-heading">
