Background Image Managed.

--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
                     <!-- DESIGN INSPIRATION. -->
                     <p class="text-tiny gray-text-1">
                         Built by 
-                        <a href="https://brittanychiang.com/" class="neon-text text-tiny" target="blank">
+                        <a href="#" class="neon-text text-tiny" target="blank">
                             Lv.1 Alchemy.
                         </a>
                     </p>
