--- a/navodaya/index.html
+++ b/navodaya/index.html
@@ -31,14 +31,14 @@
         </div>
 
         <video autoplay muted loop id="myVideo">
-            <source src="videos/Tokyo_973.mp4" type="video/mp4">
+            <source src="videos/PexelsVideos_KellyLacy_HD_2818551.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
         </video>
 
         <!-- CONTENTS. -->
         <div id="contents">
             <p id="under-construction" data-aos="fade-left">
-                <button class="btn btn-primary btn-lg" onclick="alert('HELLO! This site is currently under-construction &#x1F527;. Video: https://pixabay.com/videos/city-skyscrapers-hong-kong-modern-973/');">
+                <button class="btn btn-primary btn-lg" onclick="alert('HELLO!\nThis site is currently under-construction &#x1F527;.\nVideo from pexels.com by Kelly Lacy.');">
                     Take a tour.
                 </button>
             </p>
